[package]
authors = ["The Rust Project Developers"]
name = "rustdoc"
version = "0.0.0"
edition = "2018"

[lib]
name = "rustdoc"
path = "lib.rs"

[dependencies]
itertools = "0.8"
minifier = "0.0.33"
pulldown-cmark = { version = "0.7", default-features = false }
rayon = { version = "0.3.0", package = "rustc-rayon" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spellbound = "0.1.1"
tempfile = "3"
